<resources>
    <string name="template">template</string>
    <string name="funkopop_collection">FunkoPOP Collection</string>
    <string name="make_new_entry">Make New Entry</string>
    <string name="update_entry">Update Entry</string>
    <string name="delete">delete</string>
    <string name="title_activity_new_funko">Leanback NewFunko</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="new_funkopop">New FunkoPOP</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="fandom">Fandom</string>
    <string name="on">On</string>
    <string name="ultimate">Ultimate</string>
    <string name="price">Price</string>
    <string name="off">Off</string>
    <string name="add_entry">Add Entry</string>
    <string name="title_activity_update_funko">Leanback UpdateFunko</string>
    <string name="update_funko">Update Funko</string>
    <string name="number_to_update">Number to update</string>
    <string name="update_entry_">Update Entry</string>
    <string name="view_collection">View Collection</string>
</resources>